--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ body:not(.isTablet) #indice .units ul li:hover:not(.disabled),
 #book-index #indice .unit-content a:focus,
 #indice .units ul li a:focus,
 #indice .actividades a:focus {
-    color: #E7604D;
+    color: #E7604D;,
 }
 
 #book-index #indice .unit-content .actividades .item {
@@ -229,7 +229,7 @@ body.is_app #actividad .class_slide {
 }
 
 #actividad .content .header .title {
-	display: none;
+	min-height: 0px;
 }
 
 #actividad .content .header .title h3 {
@@ -527,10 +527,11 @@ body:not(.edit) .slider-indicators {
 }
 
 .bck-i-fullscreen figcaption {
-	border-bottom: 0px solid black;
-    margin-bottom: 15px;
-    color: #5b5a5d;
-    border-radius: 5px;
+	border-bottom: 2px solid black;
+	-webkit-border-radius: 5px;
+	   -moz-border-radius: 5px;
+	        border-radius: 5px;
+	background: #FDFDFD;
 }
 
 #actividad .player.audio {
@@ -551,28 +552,17 @@ body:not(.edit) .slider-indicators {
 }
 
 .bck-title-1 {
-    color: #211915;
-    border-bottom: 1px solid #211915;
-    font-size: 2.2rem;
-    font-weight: bold;
+    color: #6f6a66;
 }
 
 .bck-title-1:before {
-	display: none;
 	content: '\f101';
 	margin-right: 10px;
 	font-family: 'FontAwesome';
 }
 
-.bck-title-2 {
-color: #a3bd31;
-}
-
-
-
 .bck-title-3 {
-color: #211915;
-font-size: 1.9rem;
+    font-size: 1.7rem;
 }
 
 .bck-enfasis {
@@ -784,27 +774,53 @@ font-size: 1.9rem;
 
 .bck-box-1 .bck-title {
     border-bottom: 0px solid #eee;
-    color: #ffffff;
-    background-color: #007dc1;
-    padding: 20px 10px 20px 30px;
+    color: #9acb1e;
     font-size: 2.1rem;
     font-weight: bold;
-    text-align: left;
 }
 
 .bck-box.bck-box-1 .bck-content {
-    padding: 30px;
-    border: 2px solid;
-    border-color: #007dc1;
-    background-color: #edf3fa;
+    padding-left: 80px;
 }
 
 .bck-box.bck-box-1:before {
-	display: none;
+	content: "\f0eb";
+	position: absolute;
+	top: 3px;
+	left: 5px;
+	z-index: 100;
+	width: 62px;
+	height: 62px;
+    border: 5px solid #fff;
+	-webkit-border-radius: 100%;
+	   -moz-border-radius: 100%;
+	        border-radius: 100%;
+    padding: 17px 3px 5px 5px;
+	color: white;
+	font-size: 3.5rem;
+    font-family: 'FontAwesome';
 }
 
 .bck-box.bck-box-1:after {
-	display: none;
+	content: "";
+	position: absolute;
+	bottom: 0;
+	right: -14px;
+	z-index: -5;
+	width: 100%;
+	height: 100%;
+	background: #F3F4E2;
+    border-right: 14px solid #9AC61E;
+    -moz-transform: none;
+      -o-transform: none;
+         transform: none;
+    -ms-transform: skewX(-10deg);
+    -webkit-transform: skewX(-10deg);
+    -webkit-transform-origin: bottom right;
+       -moz-transform-origin: bottom right;
+        -ms-transform-origin: bottom right;
+         -o-transform-origin: bottom right;
+            transform-origin: bottom right;
 }
 
 /*CAJA2*/
