--- a/style.css
+++ b/style.css
@@ -574,12 +574,9 @@ body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover, #bo
 
 
 #indice .units ul li {
-    background: #e4e4e4;
-    -webkit-border-radius: 18px;
-    -moz-border-radius: 18px;
-    border-radius: 18px;
+    background: #ededed;   
     margin-bottom: 8px;
-    padding: 8px 16px;
+    padding: 7px 0px;
     border-left: 5px solid #6eaa6f;
 }
 
