--- a/style.css
+++ b/style.css
@@ -757,9 +757,14 @@ color: #a3bd31;
 #actividad .content .texto_curso .bck-ol-1 li:before,
 #actividad .popover-content .bck-ol-1 li:before,
 #actividad .content .workspace ul li .bck-ol-1 li:before {
-	top: 1px;
-	left: -30px;
-	width: 25px;
+    top: 1px;
+    left: -40px;
+    width: 27px;
+    height: 29px;
+    background: #a3bd31;
+    text-align: center;
+    color: #ffffff;
+
 }
 
 /*LISTA ORDENADA 2*/
@@ -1123,6 +1128,27 @@ color: #a3bd31;
 
 .titulo-2.aprender:before {
 	background-image: url(titulo2_aprender_icon.png);
+}
+
+
+/*4*/
+
+.bck-title-4 {
+    color: #a3bd31;
+    font-size: 3.1rem;
+    font-weight: bold;
+}
+
+/*enlace actividades*/
+
+.texto_curso .bck-activity-link, .texto_curso .bck-link {
+    cursor: pointer;
+    background: #9acb1e;
+    text-align: center;
+    line-height: 10px;
+    padding-bottom: 10px;
+    border-radius: 2px;
+    
 }
 
 
