--- a/style.css
+++ b/style.css
@@ -1170,7 +1170,7 @@ color: #a3bd31;
 
 .texto_curso .bck-activity-link, .texto_curso .bck-link {
     cursor: pointer;
-    background: #9acb1e;
+    background: #a3bd31;
     text-align: center;
     line-height: 10px;
     padding-bottom: 10px;
